[package]
name = "tokio_codec-web"
version = "0.1.0"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
futures = "0.3"
futures-util = "0.3"
tokio =  { version="0.2", features=["macros", "dns", "rt-threaded", "tcp", "io-util"] }
tokio-util = { version="0.3", features=["codec"] }
